Updated event selection

--- a/ANA-EXOT-2019-32-INT1-defs.sty
+++ b/ANA-EXOT-2019-32-INT1-defs.sty
@@ -1,3 +1,120 @@
+
+\def\HighestDijetMass{8.12~\TeV\xspace}
+\def\HighestJetPt{3.79~\TeV\xspace}
+\def\integLumi{139.0~\ifb\xspace}
+
+\def\Pythia{{\textsc{Pythia}\xspace}}
+\def\Powheg{{\textsc{Powheg}\xspace}}
+\def\BlackMax{BlackMax\xspace}
+\def\Geant{{\textsc{Geant4}\xspace}}
+\def\CalcHEP{CalcHEP\xspace}
+\def\NLOJET{{\textsc{NLOJET++}\xspace}}
+\def\BumpHunter{{\textsc{BumpHunter}\xspace}}
+
+\def\mFchi{F_{\chi}\xspace}
+\def\Fchi{$\mFchi$}
+\def\mFchimjj{F_{\chi}(m_{12})\xspace}
+\def\Fchimjj{$\mFchimjj$}
+\def\mjj{\ensuremath{m_{jj}}\xspace}
+\def\ystar{\ensuremath{y^\ast}\xspace}
+\def\yB{\ensuremath{y_B}\xspace}
+\def\qstar{\ensuremath{q^\ast}\xspace}
+\def\bstar{\ensuremath{b^\ast}\xspace}
+\def\Wstar{\ensuremath{W^\ast}\xspace}
+\def\Wprime{\ensuremath{W'}\xspace}
+\def\Zprime{\ensuremath{Z'}\xspace}
+\def\qbar{$\overline{q}$\xspace}
+\def\qqbar{$q\overline{q}$\xspace}
+\def\bbar{$\overline{b}$\xspace}
+\def\bbbar{$b\overline{b}$\xspace}
+\def\s{\ensuremath{\sqrt{s}}\xspace}
+
+\def\pT{\ensuremath{p_{\mathrm T}}\xspace}
+\def\pt{$\pT$}
+\def\ptsubl{\ensuremath{p_{\mathrm T}^{sublead}}}
+\def\Acc{\ensuremath{\cal A}}
+\def\thetanp{\ensuremath{\theta_{np}}}
+\def\Nev{\ensuremath{{N_{ev}}}}
+\def\npv{\ensuremath{N_{\mathrm PV}}}
+\def\mm{\ensuremath{\langle\mu\rangle}}
+\def\as{\ensuremath{\alpha_{s}}}
+
+\def\akt{anti-\ensuremath{k_{\mathrm t}}\xspace}
+\def\Akt{Anti-\ensuremath{k_{\mathrm t}}\xspace}
+
+\def\sigmu{\ensuremath{\mu}}
+\def\qmu{\ensuremath{q_\mu}}
+\def\nuipar{\ensuremath{\theta}}
+\def\etaLL{\ensuremath{\eta_{LL}}}
+
+\newcommand*{\SM}{\textsc{sm}\xspace}
+\newcommand*{\CI}{\textsc{ci}\xspace}
+
+\newcommand{\gDM}{\ensuremath{g_{\chiDM}}\xspace}
+\newcommand{\gdm}{\gDM}
+\newcommand{\gq}{\ensuremath{g_{\mathrm q}}\xspace}
+\newcommand{\mmed}{\mMed}
+\newcommand{\Mmed}{\mMed}
+\newcommand{\mMed}{\ensuremath{M_{\mathrm{med}}}\xspace}
+\newcommand{\mdm}{\ensuremath{m_{\chiDM}}\xspace}
+\newcommand{\mDM}{\mdm}
+\newcommand{\chiDM}{\ensuremath{\chi}\xspace}
+
+% Search-phase related
+\def\resonanceFitRange{\ensuremath{1.1\text{--}8.1}~\TeV\xspace}
+\def\bumpHunterSignalInterval{\ensuremath{XX\text{--}XX}~\TeV\xspace}
+\def\bhpval{0.89}
+
+\def\resonanceFitRangeWstar{\ensuremath{1.7\text{--}8.1}~\TeV\xspace}
+\def\bumpHunterSignalIntervalWstar{\ensuremath{XX\text{--}XX}~\TeV\xspace}
+\def\bhpvalWstar{0.88}
+
+\def\bhpvalOneb{0.69}
+\def\bhpvalTwob{0.83}
+
+% Qstar related
+\def\qstarLim{6.7}
+\def\qstarLimExp{6.4}
+
+% QBH/BM related
+\def\resBMLim{9.4}
+\def\resBMLimExp{9.4}
+
+% Wstar related
+\def\WstarLim{3.9}
+\def\WstarLimExp{4.1}
+
+% Wprime related
+\def\wprimeLim{4.0}
+\def\wprimeLimExp{4.2}
+
+% HVT related
+\def\HVTLim{XX}
+\def\HVTLimExp{XX}
+
+% Bstar related
+\def\bstarLim{3.2}
+\def\bstarLimExp{3.1}
+
+% ZPrimebb Related
+\def\SSMZPrimeLim{2.7}
+\def\SSMZPrimeLimExp{2.7}
+\def\DMZPrimeLim{2.9}
+\def\DMZPrimeLimExp{3.0}
+
+% KKGraviton Related
+\def\KKGravitonLim{2.8}
+\def\KKGravitonLimExp{2.9}
+
+% QG Tagging Related
+\newcommand*{\ntrk}{\ensuremath{n_{\textrm{track}}}\xspace}
+\newcommand*{\nqg}{\ensuremath{n_{\textrm{qg}}}\xspace}
+\def\QQ{{\textbf{QQ}}}
+\def\QG{{\textbf{QG}}}
+\def\GG{{\textbf{GG}}}
+\def\JJ{{\textbf{JJ}}}
+
+
 \def\s{\ensuremath{\sqrt{s}}}
 \def\BlackMax{BlackMax}
 \def\Wprime{\ensuremath{W^\prime}}
@@ -7,23 +124,10 @@
 \newcommand*{\QCD}{QCD\xspace}
 \def\qstar{\ensuremath{q^\ast}}
 \def\QBH{{\textsc qbh}}
-\newcommand*{\CI}{\textsc{ci}\xspace}
-\def\Pythia{{\textsc{Pythia}}}
+
 \def\Geant{{\textsc{Geant4}}}
-\newcommand{\mMed}{\ensuremath{M_{\mathrm{med}}}\xspace}
-\newcommand{\gq}{\ensuremath{g_{\mathrm q}}\xspace}
-\newcommand{\gDM}{\ensuremath{g_{\chiDM}}\xspace}
-\newcommand{\chiDM}{\ensuremath{\chi}\xspace}
-\newcommand{\mdm}{\ensuremath{m_{\chiDM}}\xspace}
-\newcommand{\mDM}{\mdm}
-\newcommand*{\ntrk}{\ensuremath{n_{\textrm{track}}}\xspace}
-\newcommand*{\nqg}{\ensuremath{n_{\textrm{qg}}}\xspace}
-\def\QQ{{\textbf{QQ}}}
-\def\GG{{\textbf{GG}}}
-\def\QG{{\textbf{QG}}}
-\def\JJ{{\textbf{JJ}}}
-\def\integLumi{37.4~fb$^{-1}$} %some plots still 14.2
-\def\pT{\ensuremath{p_{\mathrm T}}}
+
+%\def\pT{\ensuremath{p_{\mathrm T}}}
 \def\yB{\ensuremath{y_B}}
 \def\ystar{\ensuremath{y^\ast}}
 
