--- a/ANA-EXOT-2019-32-INT1.bib
+++ b/ANA-EXOT-2019-32-INT1.bib
@@ -658,4 +658,28 @@ d Feng, Wan-Zhe and Goldberg, Haim and Huang, Xing and Lust, Dieter and Stojkovi
       reportNumber   = "GLAS-PPE-2014-05, MCNET-14-29, IPPP-14-111, DCPT-14-222",
       SLACcitation   = "%%CITATION = ARXIV:1412.7420;%%"
 }
+
+@techreport{Nishu:2646455,
+      author        = "Nishu, Nishu and Allen, Benjamin William and Bauce, Matteo
+                       and Bawa, Harinder Singh and Bertram, Iain Alexander and
+                       Coccaro, Andrea and Di Bello, Francesco Armando and Ding,
+                       Wei and Dong, Binbin and Francescato, Simone and Gingrich,
+                       Douglas and Liu, Bingxuan and Whitmore, Ben William and
+                       Zhou, Ning and Zhang, Dengfeng and Li, Haifeng and
+                       Abulaiti, Yiming and Strom, David and Proudfoot, James and
+                       Love, Jeremy and Wang, Rui and Giagu, Stefano and Poulsen,
+                       Trine and Chen, Xin and Gao, Yongsheng and Windischhofer,
+                       Philipp Jonas and Schmoeckel, Julian Constantin",
+      title         = "{Search for New Phenomena in Dijet Events using the
+                       complete Run-2 dataset collected with the ATLAS Detector at
+                       $\sqrt{s}$ =13 TeV}",
+      institution   = "CERN",
+      address       = "Geneva",
+      number        = "ATL-COM-PHYS-2018-1538",
+      month         = "Nov",
+      year          = "2018",
+      reportNumber  = "ATL-COM-PHYS-2018-1538",
+      url           = "https://cds.cern.ch/record/2646455",
+}
+
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
